# wasmer-wasi

./: Cargo.toml  README.md  domain.d.ts  domain.js  domain.wit
domain/: Cargo.toml
domain/src/: bank_account.rs  domain.rs  lib.rs  ppmain.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
witty/: Cargo.toml  witgen.wit
witty/src/: lib.rs
