[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thalo = { version = "0.5", features = ["macros"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }

[build-dependencies]
esdl = { path = "/Users/ari/dev/thalo-sdl", version = "0.3", features = [
  "codegen-rust",
  "wasm",
] }
